<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@id/userListFragment">
    <fragment
        android:id="@+id/userListFragment"
        android:name="com.josephshawcroft.stackexchangeapp.userlist.UserListFragment"
        android:label="Stack Exchange Api Searcher"
        tools:layout="@layout/fragment_user_list" >
        <action
            android:id="@+id/action_userListFragment_to_selectedUserFragment"
            app:destination="@id/selectedUserFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"/>
    </fragment>
    <fragment
        android:id="@+id/selectedUserFragment"
        android:name="com.josephshawcroft.stackexchangeapp.selecteduser.SelectedUserFragment"
        android:label="User"
        tools:layout="@layout/fragment_selected_user">
        <argument
            android:name="selectedUser"
            app:argType="com.josephshawcroft.stackexchangeapp.data.model.User" />
    </fragment>
</navigation>